<resources>
    <string name="app_name">tuoxie-android</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">用户名/手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">Email</string>
    <string name="jump_register">注册</string>
    <string name="getLastGPSStr">获取最后一次位置</string>
    <string name="statusTextStr">TextView</string>
    <string name="userinfoStr"></string>
    <string name="goToStr">开始导航</string>
</resources>
