<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/getLastGPS_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="100dp"
        android:text="@string/getLastGPSStr" />

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="482dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="247dp">

    </com.amap.api.maps.MapView>

    <TextView
        android:id="@+id/reminder_text"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="162dp"
        android:fadeScrollbars="false"
        android:isScrollContainer="true"
        android:keepScreenOn="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:scrollHorizontally="true"
        android:verticalScrollbarPosition="right" />

    <TextView
        android:id="@+id/userinfotext"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="13dp"
        android:text="@string/userinfoStr" />

    <Button
        android:id="@+id/goToLocation"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="30dp"
        android:text="@string/goToStr" />

    <Button
        android:id="@+id/getFall_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="100dp"
        android:text="获取最近跌倒位置" />

</RelativeLayout>